--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit-siwe-next-auth": "^0.2.0",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "connectkit": "^1.4.0",
+    "encoding": "^0.1.13",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "ethers": "^5.7.2",
+    "i": "^0.3.7",
+    "iron-session": "^6.3.1",
+    "lokijs": "^1.5.12",
     "next": "13.4.9",
+    "npm": "^9.8.0",
+    "pino-pretty": "^10.0.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.63.6",
+    "siwe": "^2.1.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   }
