--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.2.0",
+    "@standard-crypto/farcaster-js": "^5.6.0",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "connectkit": "^1.4.0",
     "encoding": "^0.1.13",
     "eslint": "8.44.0",
