--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "connectkit": "^1.4.0",
+    "connectkit-next-siwe": "^0.2.0",
     "encoding": "^0.1.13",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
