--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@farsign/hooks": "^1.2.1",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.2.0",
     "@standard-crypto/farcaster-js": "^5.6.0",
     "@types/node": "20.4.1",
@@ -30,6 +32,7 @@
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-qr-code": "^2.0.11",
     "sass": "^1.63.6",
     "siwe": "^2.1.4",
     "tailwindcss": "3.3.2",
