--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "ethers": "^5.7.2",
     "i": "^0.3.7",
     "iron-session": "^6.3.1",
+    "lodash": "^4.17.21",
     "lokijs": "^1.5.12",
     "next": "13.4.9",
     "npm": "^9.8.0",
@@ -39,5 +40,8 @@
     "siwe": "^2.1.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.195"
   }
 }
