--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "ethers": "^5.7.2",
+    "graphql-request": "^6.1.0",
+    "graphql-tag": "^2.12.6",
     "i": "^0.3.7",
     "iron-session": "^6.3.1",
     "lodash": "^4.17.21",
@@ -38,8 +40,10 @@
     "react-qr-code": "^2.0.11",
     "sass": "^1.63.6",
     "siwe": "^2.1.4",
+    "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "wagmi": "^1.3.8"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195"
